<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">

        <include layout="@layout/my_transparent_toolbar" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/welcome_text"
            style="@style/bold_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/verify_your_mobile"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/largest_text_size" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/normal_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/enter_otp_code"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/pin_lin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/pin_one"
                style="@style/normal_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/pin_et_states"
                android:cursorVisible="false"
                android:digits="0123456789"
                android:enabled="true"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6"
                android:nextFocusRight="@+id/pin_two"
                android:nextFocusForward="@+id/pin_two"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/large_text_size" />


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/dark_grey_rounded_circle_btn_bg">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/verify_now_btn"
                style="@style/semi_bold_style"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/verify_now"
                android:textColor="@color/white" />


        </RelativeLayout>


        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_rel"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                style="@style/semi_bold_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/sms_not_received"
                android:textColor="@color/dark_grey" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/resend_tv"
                style="@style/bold_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/resent_code"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
