<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp">

        <include layout="@layout/my_transparent_toolbar" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/logo"

            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_below="@+id/view"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/welcome_text"
            style="@style/bold_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/large_text_size"
            android:visibility="visible" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/welcome_msg"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sign_up_using_mobile_number"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/name_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_msg"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/fistname_et"
                    style="@style/normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="5dp"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:nextFocusRight="@+id/last_name_et"
                    android:nextFocusDown="@+id/last_name_et"
                    android:textColorHint="@color/grey_text"
                    android:theme="@style/EditTextTheme" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/last_name_et"
                    style="@style/normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="5dp"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:nextFocusRight="@+id/email_et"
                    android:nextFocusDown="@+id/email_et"
                    android:textColorHint="@color/grey_text"
                    android:theme="@style/EditTextTheme" />

            </LinearLayout>


        </LinearLayout>


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email_et"
            style="@style/normal_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_lin"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusRight="@+id/mobile_et"
            android:nextFocusDown="@+id/mobile_et"
            android:textColorHint="@color/grey_text"
            android:theme="@style/EditTextTheme"

            />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/pwd_et"
            style="@style/normal_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_et"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_vpn_key"
            android:drawableLeft="@drawable/ic_vpn_key"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/grey_text"
            android:theme="@style/EditTextTheme" />


        <RelativeLayout
            android:id="@+id/signup_rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pwd_et"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/dark_grey_rounded_circle_btn_bg">


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sing_up"
                style="@style/semi_bold_style"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/sign_up"
                android:textColor="@color/white" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottom_lin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_rel"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/do_not_have_account"
                style="@style/normal_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="Already have account?"
                android:textColor="@color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sign_in_tv"
                style="@style/black_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/black" />

        </LinearLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
