<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:fitsSystemWindows="true"
    android:paddingStart="30dp"
    android:paddingLeft="30dp"
    android:paddingEnd="30dp"
    android:paddingRight="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_lin"
            android:layout_alignParentTop="true"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:src="@drawable/logo" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/welcome_text"
                style="@style/semi_bold_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/verify_mobile_number"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mobile_et"
                style="@style/normal_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name_tv"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_phone_iphone"
                android:drawableLeft="@drawable/ic_phone_iphone"
                android:drawablePadding="10dp"
                android:hint="@string/complete_mobile"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:nextFocusRight="@+id/pwd_et"
                android:nextFocusDown="@+id/pwd_et"
                android:theme="@style/EditTextTheme"

                />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/new_to_aligo_tv"
                style="@style/normal_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/forgot_pwd"
                android:textColor="@color/black"
                android:visibility="gone" />


            <RelativeLayout
                android:id="@+id/login_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_pwd_tv"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/dark_grey_rounded_circle_btn_bg">


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit_btn"
                    style="@style/semi_bold_style"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/submit"
                    android:textColor="@color/white" />


            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>